--- a/src/main/resources/application-jpa.properties
+++ b/src/main/resources/application-jpa.properties
@@ -1,3 +1,15 @@
 spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.mongo.MongoAutoConfiguration,\org.springframework.boot.autoconfigure.data.mongo.MongoDataAutoConfiguration
 
 spring.data.mongodb.repositories.enabled=false
+
+# The SQL dialect makes Hibernate generate better SQL for the chosen database
+#spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
+spring.jpa.hibernate.dialect=org.hibernate.dialect.SQLServer2012Dialect
+spring.jpa.hibernate.ddl-auto = create-drop
+
+ #spring.datasource.driverClassName = com.mysql.jdbc.Driver
+ spring.datasource.driverClassName = com.microsoft.sqlserver.jdbc.SQLServerDriver
+ #spring.datasource.url = jdbc:mysql://SBR-SQLDB-03:60961/HybridOuthDB
+ spring.datasource.url = jdbc:sqlserver://SBR-SQLDB-03;port=60961;databaseName=HybridOuthDB
+ spring.datasource.username =hybridouth
+ spring.datasource.password =hybridouth@sbr
