--- a/src/main/resources/application-mongo.properties
+++ b/src/main/resources/application-mongo.properties
@@ -2,3 +2,9 @@
 spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.orm.jpa.HibernateJpaAutoConfiguration,\org.springframework.boot.autoconfigure.data.jpa.JpaRepositoriesAutoConfiguration,\org.springframework.boot.autoconfigure.jdbc.DataSourceAutoConfiguration
 #
 spring.data.jpa.repositories.enabled=false
+
+spring.data.mongodb.database=ExelaAuth
+spring.data.mongodb.username=exelauser
+spring.data.mongodb.password=E#elaUser@123
+spring.data.mongodb.host=10.182.208.25
+spring.data.mongodb.port=27017
